@@ -4,6 +4,9 @@ Changelog
 2.13.1 (unreleased)
 -------------------
 
+- LP #143273: Enable the dtml-var modifiers url_quote, url_unquote,
+  url_quote_plus and url_unquote_plus to handle unicode strings.
+
 
 2.13.0 (2010-06-19)
 -------------------
